refactor : lesson refactor