@@ -3,15 +3,12 @@ package com.lesson.spring.service;
 import com.lesson.spring.api.lesson.request.CreateLessonRequest;
 import com.lesson.spring.api.lesson.request.UpdateProfessorLessonRequest;
 import com.lesson.spring.api.lesson.response.LessonView;
-import com.lesson.spring.api.professor.response.ProfessorResponse;
 import com.lesson.spring.entity.Lesson;
 import com.lesson.spring.entity.LessonDetail;
 import com.lesson.spring.entity.Week;
 import com.lesson.spring.repository.LessonDetailRepository;
 import com.lesson.spring.repository.LessonRepository;
-import com.lesson.spring.repository.ProfessorRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 public class LessonService {
 
     private final LessonRepository lessonRepository;
-    private final ProfessorRepository professorRepository;
     private final LessonDetailRepository lessonDetailRepository;
 
     @Transactional
@@ -58,17 +54,16 @@ public class LessonService {
         List<Lesson> lessons = lessonRepository.findAll();
 
         return lessons.stream()
-                .map(l -> LessonView.response(l))
-                .collect(Collectors.toList());
+                .map(lesson -> LessonView.from(lesson))
+                .toList();
     }
 
     public List<LessonView> findByName(String name) {
         List<Lesson> lessons = lessonRepository.findByName(name);
 
-        return lessons.stream().map(lesson -> LessonView.builder()
-                .name(lesson.getName())
-                .build()
-
-        ).collect(Collectors.toList());
+        return lessons.stream().map(
+                lesson -> LessonView.from(lesson)
+        ).toList();
     }
+
 }
